--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,14 +3,12 @@ body {
   overflow: hidden;
 }
 
-circle {
-  fill: steelblue;
-}
-
 .line-path {
   fill: none;
   stroke-width: 5;
-  stroke-linejoin = round;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  mix-blend-mode: multiply;
 };
 
 text {
@@ -18,7 +16,7 @@ text {
 }
 
 .tick text {
-   	font-size: 2.7em;
+   	font-size: 1.4rem;
     fill: #635F5D;
 }
 
@@ -32,6 +30,6 @@ text {
 } 
 
 .title {
-	font-size: 3.7em;
+	font-size: 2.7em;
   fill: #635F5D;
 }
